--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "hammerjs": "^2.0.8",
+    "jw-angular-pagination": "^1.2.0",
     "rxjs": "~6.4.0",
     "rxjs-compat": "^6.6.7",
     "tslib": "^1.10.0",
